--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   "dependencies": {
     "@emotion/core": "^10.0.28",
     "@emotion/styled": "^10.0.27",
+    "@material-ui/core": "^4.9.5",
+    "@material-ui/icons": "^4.9.1",
     "gatsby": "^2.19.7",
     "gatsby-image": "^2.2.39",
     "gatsby-plugin-emotion": "^4.1.23",
@@ -37,6 +39,7 @@
     "react-typography": "^0.16.19",
     "typeface-pt-sans": "0.0.72",
     "typeface-pt-serif": "0.0.72",
+    "typeface-roboto": "0.0.75",
     "typography": "^0.16.19",
     "typography-breakpoint-constants": "^0.16.19"
   },
