--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -4,6 +4,8 @@ backend:
 publish_mode: editorial_workflow
 media_folder: static/img
 public_folder: /img
+site_url: https://darisstrickland.com
+display_url: https://darisstrickland.com
 collections:
   - name: "blog"
     label: "Blog"
