--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "gatsby-transformer-sharp": "^2.3.13",
     "gh-pages": "^2.2.0",
     "gray-percentage": "^2.0.0",
+    "lodash": "^4.17.15",
     "prismjs": "^1.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
