--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby-plugin-google-analytics": "^2.1.34",
     "gatsby-plugin-manifest": "^2.2.39",
     "gatsby-plugin-offline": "^3.0.32",
+    "gatsby-plugin-postcss": "^2.2.3",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sharp": "^2.4.3",
     "gatsby-plugin-typography": "^2.3.21",
@@ -33,6 +34,7 @@
     "gh-pages": "^2.2.0",
     "gray-percentage": "^2.0.0",
     "lodash": "^4.17.15",
+    "modernizr": "^3.10.0",
     "prismjs": "^1.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -45,7 +47,9 @@
     "typography-breakpoint-constants": "^0.16.19"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "postcss-import": "^12.0.1",
+    "prettier": "1.19.1",
+    "tailwindcss": "^1.2.0"
   },
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
@@ -65,6 +69,7 @@
     "serve": "gatsby serve",
     "clean": "gatsby clean",
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "deploy": "gatsby build && gh-pages -d public -b master"
+    "deploy": "gatsby build && gh-pages -d public -b master",
+    "type": "node typography.js > src/components/typography.css"
   }
 }
