--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "typography-breakpoint-constants": "^0.16.19"
   },
   "devDependencies": {
+    "@fullhuman/postcss-purgecss": "^2.1.2",
     "postcss-import": "^12.0.1",
     "prettier": "1.19.1",
     "tailwindcss": "^1.2.0"
