--- a/package.json
+++ b/package.json
@@ -12,16 +12,15 @@
     "@emotion/styled": "^10.0.27",
     "@material-ui/core": "^4.9.5",
     "@material-ui/icons": "^4.9.1",
-    "gatsby": "^2.19.7",
+    "gatsby": "^2.24.91",
     "gatsby-image": "^2.2.39",
-    "gatsby-plugin-emotion": "^4.1.23",
     "gatsby-plugin-feed": "^2.3.26",
-    "gatsby-plugin-google-analytics": "^2.1.34",
     "gatsby-plugin-manifest": "^2.2.39",
+    "gatsby-plugin-module-resolver": "^1.0.3",
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-postcss": "^2.2.3",
     "gatsby-plugin-react-helmet": "^3.1.21",
-    "gatsby-plugin-sharp": "^2.4.3",
+    "gatsby-plugin-sharp": "^2.6.43",
     "gatsby-plugin-typography": "^2.3.21",
     "gatsby-remark-copy-linked-files": "^2.1.36",
     "gatsby-remark-images": "^3.1.42",
@@ -32,8 +31,7 @@
     "gatsby-transformer-remark": "^2.6.48",
     "gatsby-transformer-sharp": "^2.3.13",
     "gh-pages": "^2.2.0",
-    "gray-percentage": "^2.0.0",
-    "lodash": "^4.17.15",
+    "lodash": "^4.17.20",
     "modernizr": "^3.10.0",
     "prismjs": "^1.19.0",
     "react": "^16.12.0",
@@ -44,7 +42,8 @@
     "typeface-pt-serif": "0.0.72",
     "typeface-roboto": "0.0.75",
     "typography": "^0.16.19",
-    "typography-breakpoint-constants": "^0.16.19"
+    "typography-breakpoint-constants": "^0.16.19",
+    "whatwg-fetch": "^3.0.0"
   },
   "devDependencies": {
     "@fullhuman/postcss-purgecss": "^2.1.2",
