--- a/package.json
+++ b/package.json
@@ -3,54 +3,7 @@
   "private": true,
   "description": "A starter for a blog powered by Gatsby and Markdown",
   "version": "0.1.0",
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
-  "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
-  },
-  "dependencies": {
-    "@emotion/core": "^10.0.28",
-    "@emotion/styled": "^10.0.27",
-    "@material-ui/core": "^4.9.5",
-    "@material-ui/icons": "^4.9.1",
-    "gatsby": "^2.24.91",
-    "gatsby-image": "^2.2.39",
-    "gatsby-plugin-feed": "^2.3.26",
-    "gatsby-plugin-manifest": "^2.2.39",
-    "gatsby-plugin-module-resolver": "^1.0.3",
-    "gatsby-plugin-offline": "^3.0.32",
-    "gatsby-plugin-postcss": "^2.2.3",
-    "gatsby-plugin-react-helmet": "^3.1.21",
-    "gatsby-plugin-sharp": "^2.6.43",
-    "gatsby-plugin-typography": "^2.3.21",
-    "gatsby-remark-copy-linked-files": "^2.1.36",
-    "gatsby-remark-images": "^3.1.42",
-    "gatsby-remark-prismjs": "^3.3.30",
-    "gatsby-remark-responsive-iframe": "^2.2.31",
-    "gatsby-remark-smartypants": "^2.1.20",
-    "gatsby-source-filesystem": "^2.1.46",
-    "gatsby-transformer-remark": "^2.6.48",
-    "gatsby-transformer-sharp": "^2.3.13",
-    "gh-pages": "^2.2.0",
-    "lodash": "^4.17.20",
-    "modernizr": "^3.10.0",
-    "prismjs": "^1.19.0",
-    "react": "^16.12.0",
-    "react-dom": "^16.12.0",
-    "react-helmet": "^5.2.1",
-    "react-typography": "^0.16.19",
-    "typeface-pt-sans": "0.0.72",
-    "typeface-pt-serif": "0.0.72",
-    "typeface-roboto": "0.0.75",
-    "typography": "^0.16.19",
-    "typography-breakpoint-constants": "^0.16.19",
-    "whatwg-fetch": "^3.0.0"
-  },
-  "devDependencies": {
-    "@fullhuman/postcss-purgecss": "^2.1.2",
-    "postcss-import": "^12.0.1",
-    "prettier": "1.19.1",
-    "tailwindcss": "^1.2.0"
-  },
+  "author": "Daris Strickland <daris.strickland@gmail.com>",
   "homepage": "https://github.com/gatsbyjs/gatsby-starter-blog#readme",
   "keywords": [
     "gatsby"
@@ -68,8 +21,44 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1",
-    "deploy": "gatsby build && gh-pages -d public -b master",
-    "type": "node typography.js > src/components/typography.css"
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+  },
+  "dependencies": {
+    "@fullhuman/postcss-purgecss": "^3.1.3",
+    "autoprefixer": "^10.1.0",
+    "dotenv": "^8.2.0",
+    "fontsource-pt-sans": "^3.1.5",
+    "framer-motion": "^3.0.0",
+    "gatsby": "^2.29.1",
+    "gatsby-image": "^2.8.0",
+    "gatsby-plugin-feed": "^2.10.0",
+    "gatsby-plugin-manifest": "^2.9.0",
+    "gatsby-plugin-module-resolver": "^1.0.3",
+    "gatsby-plugin-offline": "^3.7.0",
+    "gatsby-plugin-postcss": "^3.4.0",
+    "gatsby-plugin-react-helmet": "^3.7.0",
+    "gatsby-plugin-sass": "^2.8.0",
+    "gatsby-plugin-sharp": "^2.11.1",
+    "gatsby-remark-copy-linked-files": "^2.7.0",
+    "gatsby-remark-images": "^3.8.0",
+    "gatsby-remark-prismjs": "^3.10.0",
+    "gatsby-remark-responsive-iframe": "^2.8.0",
+    "gatsby-remark-smartypants": "^2.7.0",
+    "gatsby-source-filesystem": "^2.8.0",
+    "gatsby-transformer-remark": "^2.13.0",
+    "gatsby-transformer-sharp": "^2.9.0",
+    "lodash": "^4.17.20",
+    "node-sass": "^4.14.1",
+    "postcss": "^8.2.1",
+    "prismjs": "^1.22.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
+    "react-helmet": "^6.1.0",
+    "react-hook-form": "^6.13.1",
+    "tailwindcss": "^2.0.2",
+    "typescript": "^4.1.3"
+  },
+  "devDependencies": {
+    "prettier": "^2.2.1"
   }
 }
