--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   },
   "dependencies": {
     "@fullhuman/postcss-purgecss": "^3.1.3",
-    "autoprefixer": "^10.1.0",
+    "@tailwindcss/postcss7-compat": "^2.0.2",
+    "autoprefixer": "^9.8.6",
     "dotenv": "^8.2.0",
     "fontsource-pt-sans": "^3.1.5",
     "framer-motion": "^3.0.0",
@@ -49,13 +50,13 @@
     "gatsby-transformer-sharp": "^2.9.0",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
-    "postcss": "^8.2.1",
+    "postcss": "^7.0.35",
     "prismjs": "^1.22.0",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-helmet": "^6.1.0",
     "react-hook-form": "^6.13.1",
-    "tailwindcss": "^2.0.2",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.0.2",
     "typescript": "^4.1.3"
   },
   "devDependencies": {
