--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "gatsby": "^2.29.1",
     "gatsby-image": "^2.8.0",
     "gatsby-plugin-feed": "^2.10.0",
+    "gatsby-plugin-goatcounter": "^0.4.0",
     "gatsby-plugin-manifest": "^2.9.0",
     "gatsby-plugin-module-resolver": "^1.0.3",
     "gatsby-plugin-offline": "^3.7.0",
