--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "gatsby-plugin-react-helmet": "^3.7.0",
     "gatsby-plugin-sass": "^2.8.0",
     "gatsby-plugin-sharp": "^2.11.1",
+    "gatsby-plugin-sitemap": "^2.11.0",
     "gatsby-remark-copy-linked-files": "^2.7.0",
     "gatsby-remark-images": "^3.8.0",
     "gatsby-remark-prismjs": "^3.10.0",
